# TradeForge

./: .env  .env.example  .gitignore  folder format  hello.py  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/: COMMIT_TEMPLATE.txt
agents/: ps_random_choices.py
core/: alpaca.py  decision.py  metadata.py
old_code/: .gitignore  pyproject.toml
old_code/scripts/: smoke_account.py  smoke_registry.py  smoke_test_alpaca.py
old_code/src/app/: factory.py  settings.py
old_tests/integration/: conftest.py  test_alpaca_order_integration.py  test_tradier_market_data.py
old_tests/unit/: test_alpaca_mappers.py  test_provider_registry.py
runner/: runner.py
scripts/: check_settings.py  quick.py
src/app/: cli.py  factory.py  settings.py
tests/integration/: test_alpaca_broker.py  test_alpaca_market_data.py
tests/unit/: test_account_basic.py  test_alpaca_broker_make_order.py  test_get_latest_bars.py
tests/utils/: alpaca_constants.py
utils/: logger.py
v1/agents/: ps_moving_average.py  ps_random_choices.py
v1/core/: alpaca.py  decision.py  signal.py
v1/logs/: 2025-10-05_15-20-55_RandomChoices_BTCUSD.csv  2025-10-05_15-25-10_RandomChoices_BTCUSD.csv  2025-10-05_16;17;23_RandomChoices_BTCUSD.csv  2025-10-05_19;22;48_RandomChoices_BTCUSD.csv  2025-10-05_19;32;53_RandomChoicesAgent_BTCUSD.csv  2025-10-05_19;45;32_MovingAverageAgent_BTCUSD.csv
v1/logs_examples/: 2025-10-03_17-49-06_RandomChoices_BTCUSD.csv  2025-10-03_17-51-58_RandomChoices_BTCUSD.csv
v1/runner/: runner.py
v1/utils/: id_generator.py  timer.py
(+30 files in other folders)
