[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradeforge"
version = "0.1.0"
description = "A unified trading framework and CLI for multi-broker integration and automated strategy development."
authors = [
    { name = "Peter Heile", email = "peterjheile@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

#runtime dependencies
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.11.0",
    "alpaca-py>=0.42.2",
]

[project.scripts]
tradeforge = "app.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# optional — include config or templates
"app" = ["*.env", "*.ini"]